# rustapi

./: .env  Cargo.toml  README.md
src/: main.rs
src/dbase/: connect_db.rs  mod.rs
src/models/: mod.rs  psswrd_model.rs
src/routes/: mod.rs  psswrd.rs
src/services/: psswrd.rs
