[package]
name = "api-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "mysql" ] }
async-std = { version = "1", features = [ "attributes" ] }
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.15.0"
mysql = "*"
chrono = "0.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = "1.0.139"
serde_json = "1.0"